--- a/css/portada.css
+++ b/css/portada.css
@@ -8,12 +8,12 @@ body {
 }
 
 .quadre-titol {
-  min-height: 10vh;
+  min-height: 100px;
   padding: 1rem;
 }
 
 .quadre {
-  height: 20vh;
+  height: 200px;
 }
 .quadre:not(.no-img) {
   background-size: 60%;
@@ -43,7 +43,7 @@ body {
 
 .desc-end p {
   color: #fff;
-  padding-top: 2vh;
+  padding-top: 20px;
   margin-bottom: 0;
 }
 
@@ -55,7 +55,7 @@ body {
   position: relative;
   color: #fff;
   text-align: center;
-  top: 1vh;
+  top: 10px;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
 }
@@ -66,7 +66,7 @@ body {
 
 .logo-barres {
   position: relative;
-  top: 1vh;
+  top: 10px;
   max-width: 80px;
 }
 
@@ -78,7 +78,7 @@ body {
 
 .other-years {
   text-align: center;
-  padding-top: 8vh;
+  padding-top: 80px;
 }
 
 .other-years a {
@@ -119,7 +119,7 @@ body {
 }
 
 .video {
-  height: 40vh;
+  height: 400px;
 }
 
 .llengues {
@@ -129,5 +129,5 @@ body {
 }
 
 .responsive-embed {
-  padding-bottom: 40vh;
+  padding-bottom: 400px;
 }
